# geospatial-docker-python

./: app.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
geo_analysis/: core.py
static/: alex.html
