[tool.poetry]
name = "geo-analysis"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Alex Berndt <berndtae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rasterio = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
